--- a/src/ProtfolioContainer/Resume/Info/Projects/Projects.css
+++ b/src/ProtfolioContainer/Resume/Info/Projects/Projects.css
@@ -48,3 +48,27 @@
       color: #fff;
   }
   
+
+  @media screen and (max-width: 1110px) {
+
+    .projects-container{
+      padding-top: 0px;
+      height: 345px;
+  
+    }
+  }
+
+  @media screen and (max-width: 720px) {
+
+    .projects-container{
+      height: 460px;
+  
+    }
+  }
+
+  @media screen and (max-width: 375px) {
+
+    .projects-container{
+      height: 750px;
+    }
+  }
