--- a/src/ProtfolioContainer/Resume/Info/Info.css
+++ b/src/ProtfolioContainer/Resume/Info/Info.css
@@ -2,6 +2,7 @@
   height: 360px;
   overflow-y: scroll;
   scroll-snap-type: y mandatory;
+  align-self: center;
 }
 
 .resume-card-option-info {
@@ -10,16 +11,51 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  background-color: rgb(159, 159, 159);
 }
 
 .resume-card-option-info-projects {
   display: flex;
-  margin-top: 90px;
   width: 100%;
-  height: 360px;
+  height: 100%;
 }
 .resume-card-option-info-education {
   display: flex;
   width: 100%;
+}
+
+@media screen and (max-width: 1110px) {
+  .scroller {
+    height: 100%;
+  }
+  .resume-card-option-info {
+    width: 700px;
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .scroller {
+    height: 100%;
+  }
+  .resume-card-option-info {
+    width: 480px;
+  }
+}
+
+@media screen and (max-width: 440px) {
+  .scroller {
+    height: 100%;
+  }
+  .resume-card-option-info {
+    width: 400px;
+  }
+  
+}
+@media screen and (max-width: 375px) {
+  .scroller {
+    height: 100%;
+  }
+  .resume-card-option-info {
+    width: 280px;
+  }
+  
 }
