--- a/src/ProtfolioContainer/Resume/Resume.css
+++ b/src/ProtfolioContainer/Resume/Resume.css
@@ -5,6 +5,7 @@
   justify-content: center;
   width: 100%;
   height: 100%;
+
 }
 .resume-card {
   display: flex;
@@ -13,18 +14,25 @@
   justify-content: center;
   width: 1050px;
   height: 360px;
+
 }
 
 
 @media screen and (max-width: 1110px) {
   .resume-card {
-    width: 930px;
+    width: 910px;
 
   }
 }
 @media screen and (max-width: 910px) {
+  .resume-container {
+    display: flex;
+
+  }
   .resume-card {
-    width: 700px;
+    display: flex;
+    width: 800px;
+    height:730px;
     flex-direction: column;
     margin-top: 20px;
 
@@ -33,16 +41,25 @@
 @media screen and (max-width: 720px) {
   .resume-card {
     width: 220px;
+    height:740px;
 
   }
 }
 
 @media screen and (max-width: 440px) {
   .resume-card {
-    width: 100px;
+    height:820px;
 
   }
 }
+
+@media screen and (max-width: 375px) {
+  .resume-card {
+    height:860px;
+
+  }
+}
+
 
 
 
