--- a/src/ProtfolioContainer/Home/NavBar/NavBar.css
+++ b/src/ProtfolioContainer/Home/NavBar/NavBar.css
@@ -86,13 +86,11 @@
     height: 100%;
     width: 100%;
     background-color: #15172c;
-
   }
-  .navBar-list-mobile-options-open .navBar-list-mobile-options{
+  .navBar-list-mobile-options-open .navBar-list-mobile-options {
     -webkit-animation: slide 1.5s forwards;
     animation: slide 1.2s forwards;
     transition: 1.2s ease-in-out;
-
   }
   @-webkit-keyframes slide {
     100% {
@@ -105,7 +103,7 @@
     }
   }
 
-  .navBar-list-mobile-options-close .navBar-list-mobile-options{
+  .navBar-list-mobile-options-close .navBar-list-mobile-options {
     -webkit-animation: slideOut 0.4s forwards;
     animation: slideOut 1.2s forwards;
     transition: 0.4s ease-out;
@@ -128,5 +126,31 @@
     margin-right: 16px;
     font-family: "Roboto Slab", serif;
     font-weight: 400;
+  }
+}
+
+@media screen and (max-width: 460px) {
+    .navBar-title h1 {
+      font-size: 38px;
+    }
+    .navBar-mobile-icon {
+      font-size: 40px;
+    }
+    .navBar-parent{
+      width: 100%;
+      padding: 30px 10px 0px 30px;
+    }
+  }
+
+@media screen and (max-width: 375px) {
+  .navBar-title h1 {
+    font-size: 38px;
+  }
+  .navBar-mobile-icon {
+    font-size: 40px;
+  }
+  .navBar-parent{
+    width: 100%;
+    padding: 30px 10px 0px 10px;
   }
 }
