--- a/src/PortfolioContainer/Resume/Resume.css
+++ b/src/PortfolioContainer/Resume/Resume.css
@@ -12,7 +12,6 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  width: 1050px;
   height: 360px;
 
 }
@@ -31,16 +30,17 @@
   }
   .resume-card {
     display: flex;
-    width: 800px;
+    width: 100%;
     height:730px;
     flex-direction: column;
     margin-top: 20px;
 
+
   }
 }
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 810px) {
   .resume-card {
-    width: 220px;
+    width: 100%;
     height:740px;
 
   }
