--- a/src/PortfolioContainer/Resume/Info/Projects/Projects.css
+++ b/src/PortfolioContainer/Resume/Info/Projects/Projects.css
@@ -8,8 +8,7 @@
 
 .projects-place {
   display: flex;
-  padding-inline: 30px;
-  padding-top: 41px;
+  padding: 30px 0px 0px 24px;
   justify-content: space-between;
   width: 100%;
 }
