--- a/src/PortfolioContainer/Resume/Info/Info.css
+++ b/src/PortfolioContainer/Resume/Info/Info.css
@@ -15,26 +15,35 @@
   display: flex;
   width: 100%;
   height: 100%;
+  background-color: brown;
 }
 .resume-card-option-info-projects {
   display: flex;
   width: 100%;
   height: 100%;
+  background-color: rgb(42, 165, 101);
+
 }
 .resume-card-option-info-workHistory {
   display: flex;
   width: 100%;
   height: 100%;
+  background-color: rgb(63, 42, 165);
+
 }
 .resume-card-option-info-programmingSkills {
   display: flex;
   width: 100%;
   height: 100%;
+  background-color: brown;
+
 }
 .resume-card-option-info-interests {
   display: flex;
   width: 100%;
   height: 100%;
+  background-color: brown;
+
 }
 
 @media screen and (max-width: 1110px) {
