--- a/src/PortfolioContainer/Resume/Options/Options.css
+++ b/src/PortfolioContainer/Resume/Options/Options.css
@@ -8,6 +8,9 @@
   box-shadow: 4px 2px 5px -2px rgba(0, 0, 0, 0.582);
   z-index: 20;
 }
+.view-scroller{
+  position: absolute;
+}
 .resume-options-icons {
   display: flex;
   align-self: baseline;
