--- a/src/PortfolioContainer/Resume/Info/Skills/Skills.css
+++ b/src/PortfolioContainer/Resume/Info/Skills/Skills.css
@@ -17,12 +17,13 @@
 .skill-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
   width: 200px;
   height: 70px;
 }
-.skill-container h1 {
+.skill-container li {
+  margin-left: 10px;
+  margin-bottom: 10px;
   font-size: 1.2rem;
   font-weight: bold;
   color: #09bead;
