--- a/src/PortfolioContainer/Resume/Info/Info.css
+++ b/src/PortfolioContainer/Resume/Info/Info.css
@@ -1,7 +1,9 @@
 .scroller {
   height: 360px;
   overflow-y: hidden;
+  overflow-x: hidden;
   scroll-snap-type: y mandatory;
+
 }
 
 .resume-card-option-info {
