--- a/src/PortfolioContainer/Projects/Projects.css
+++ b/src/PortfolioContainer/Projects/Projects.css
@@ -1,156 +1,7 @@
-/* Resume: css */
+/* project: css */
 
-.project-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  background-color: #eee;
-}
-
-.resum-card {
-  display: flex;
-  height: 360px;
-  width: 1000px;
-  background-color: #ccc;
-}
-
-/* Options: css */
-.resum-options-container {
-  display: flex;
-  height: 100%;
-}
-.resum-options {
+.demo-projects-container {
   display: flex;
   flex-direction: column;
-  width: 30%;
-  background-color: rgb(119, 217, 0);
-}
 
-/* Options Icons: css */
-
-.resum-optios-icons-colz {
-  display: flex;
-  width: 14%;
-  height: 100%;
-  align-items: center;
-  background-color: rgb(23, 4, 70);
-}
-.resum-optios-icons {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  width: 100%;
-  height: 90%;
-
-  background-color: rgb(31, 136, 171);
-}
-.resum-optios-icons > div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 40px;
-  width: 85%;
-  font-size: 18px;
-  background-color: #fff;
-}
-
-/* Options Names: css */
-
-.resum-optios-names-colz {
-  display: flex;
-  width: 100%;
-  height: 100%;
-  align-items: center;
-  background-color: rgb(175, 11, 11);
-}
-.resum-optios-names {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  width: 100%;
-  height: 90%;
-
-  background-color: rgb(131, 31, 171);
-}
-.resum-optios-names > div {
-  display: flex;
-  height: 40px;
-  width: 85%;
-  border-radius: 20px 3px 50px 4px;
-  background-color: #fff;
-}
-.resum-optios-names h1 {
-  display: flex;
-  font-size: 16px;
-  margin-top: 8px;
-  padding-left: 20px;
-  width: 100%;
-  height: 80%;
-  border-radius: 20px 3px 50px 4px;
-  background-color: rgb(215, 82, 82);
-}
-
-/* info: css */
-
-.resum-info {
-  width: 75%;
-  height: 100%;
-  background-color: black;
-}
-
-.resum-info-education {
-  display: flex;
-  height: 100%;
-  background-color: rgb(82, 82, 82);
-}
-.resum-info-workHistory {
-  display: flex;
-  height: 100%;
-  background-color: rgb(215, 83, 83);
-}
-.resum-info-skills {
-  display: flex;
-  height: 100%;
-  background-color: rgb(83, 83, 215);
-}
-.resum-info-projects {
-  display: flex;
-  height: 100%;
-  background-color: rgb(83, 215, 87);
-}
-.resum-info-interests {
-  display: flex;
-  height: 100%;
-  background-color: rgb(191, 215, 83);
-}
-
-/*when increes screen width */
-
-@media screen and (max-width: 1110px) {
-  .resum-card {
-    width: 880px;
-  }
-  .resum-info {
-    height: 360px;
-  }
-}
-
-@media screen and (max-width: 1020px) {
-  .resum-card {
-    width: 90%;
-    height: 100%;
-    flex-direction: column;
-  }
-  .resum-options {
-    width: 100%;
-    height: 290px;
-  }
-
-  .resum-info {
-    width: 100%;
-    height: 410px;
-  }
 }
