--- a/src/PortfolioContainer/Resume/Info/Info.css
+++ b/src/PortfolioContainer/Resume/Info/Info.css
@@ -3,64 +3,45 @@
   overflow-y: hidden;
   overflow-x: hidden;
   scroll-snap-type: y mandatory;
-
 }
 
-.resume-card-option-info {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  width: 100%;
-  height: 500%;
-}
-.resume-card-option-info-education {
-  display: flex;
-  width: 100%;
+/* info: css */
+
+.resum-info {
+  width: 75%;
   height: 100%;
-  background-color: brown;
 }
-.resume-card-option-info-projects {
-  display: flex;
-  width: 100%;
-  height: 100%;
-  background-color: rgb(42, 165, 101);
 
+.resum-info-education {
+  display: flex;
+  height: 100%;
 }
-.resume-card-option-info-workHistory {
+.resum-info-workHistory {
   display: flex;
-  width: 100%;
   height: 100%;
-  background-color: rgb(63, 42, 165);
-
 }
-.resume-card-option-info-programmingSkills {
+.resum-info-skills {
   display: flex;
-  width: 100%;
   height: 100%;
-  background-color: brown;
-
 }
-.resume-card-option-info-interests {
+.resum-info-projects {
   display: flex;
-  width: 100%;
   height: 100%;
-  background-color: brown;
-
+}
+.resum-info-interests {
+  display: flex;
+  height: 100%;
 }
 
 @media screen and (max-width: 1110px) {
-  .scroller {
-    height: 100%;
-    width: 100%;
+  .resum-info {
+    height: 360px;
   }
 }
 
-@media screen and (max-width: 375px) {
-  .resume-card-option-info {
-
-    height: 700%;
-  }
-  .resume-card-option-info-projects {
-    height: 200%;
+@media screen and (max-width: 1020px) {
+  .resum-info {
+    width: 100%;
+    height: 410px;
   }
 }
