--- a/src/PortfolioContainer/Projects/Projects.css
+++ b/src/PortfolioContainer/Projects/Projects.css
@@ -3,7 +3,43 @@
 .demo-projects-container {
   display: flex;
   flex-direction: column;
-
+  height: 100%;
+  width: 100%;
+  padding-bottom: 4vh;
+  background-color: aqua;
+}
+.demo-projects-parent {
+  display: flex;
+  height: 75vh;
+  width: 100vw;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(0, 255, 55);
+}
+.demo-projects-parent section {
+  display: flex;
+  height: 50vh;
+  width: 44vh;
+  align-items: center;
+  justify-content: center;
+  margin: 1.5vw;
+  transition: all 0.3s ease-out;
+}
+.demo-projects-parent section:nth-child(1) {
+  background-color: rgb(255, 115, 0);
+}
+.demo-projects-parent section:nth-child(2) {
+  background-color: rgb(0, 157, 255);
+}
+.demo-projects-parent section:nth-child(3) {
+  background-color: rgb(255, 0, 183);
+}
+.demo-projects-parent section:nth-child(4) {
+  background-color: rgb(0, 26, 255);
 }
 
-
+.demo-projects-parent section:hover {
+  transform: scale(1.2);
+  border-radius: 20px;
+  transition: all 0.3s ease-in-out;
+}
