--- a/src/PortfolioContainer/Projects/Projects.css
+++ b/src/PortfolioContainer/Projects/Projects.css
@@ -1,45 +1,147 @@
 /* project: css */
-
 .demo-projects-container {
   display: flex;
   flex-direction: column;
   height: 100%;
   width: 100%;
-  padding-bottom: 4vh;
-  background-color: aqua;
+  padding-bottom: 8vh;
 }
 .demo-projects-parent {
   display: flex;
-  height: 75vh;
+  left: 0;
+  height: 66vh;
   width: 100vw;
+  align-self: center;
   align-items: center;
   justify-content: center;
-  background-color: rgb(0, 255, 55);
+}
+.p-scroll {
+  padding-block: 26px;
+  padding-inline: 22px;
+  display: flex;
+  scroll-snap-type: x proximity;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  width: 100vw;
 }
 .demo-projects-parent section {
   display: flex;
   height: 50vh;
-  width: 44vh;
-  align-items: center;
-  justify-content: center;
-  margin: 1.5vw;
+  min-width: 40vh;
+  margin: 2vw;
   transition: all 0.3s ease-out;
+  opacity: 0.8;
+  background-size: cover;
+  background-color: rgb(35, 70, 92);
+  background-color: #e6f7ff;
+  background-image: linear-gradient(
+      45deg,
+      rgba(0, 170, 255, 0.5) 50%,
+      transparent 50%
+    ),
+    linear-gradient(-45deg, rgba(0, 136, 204, 0.5) 50%, transparent 50%);
+  background-size: 70px 73px;
 }
 .demo-projects-parent section:nth-child(1) {
-  background-color: rgb(255, 115, 0);
+  background-image: linear-gradient(
+      45deg,
+      rgba(68, 255, 0, 0.5) 50%,
+      transparent 50%
+    ),
+    linear-gradient(-45deg, rgba(0, 204, 3, 0.5) 50%, transparent 50%);
 }
 .demo-projects-parent section:nth-child(2) {
-  background-color: rgb(0, 157, 255);
+  background-image: linear-gradient(
+      45deg,
+      rgba(238, 255, 0, 0.5) 50%,
+      transparent 50%
+    ),
+    linear-gradient(-45deg, rgba(187, 204, 0, 0.5) 50%, transparent 50%);
 }
 .demo-projects-parent section:nth-child(3) {
-  background-color: rgb(255, 0, 183);
-}
-.demo-projects-parent section:nth-child(4) {
-  background-color: rgb(0, 26, 255);
+  background-image: linear-gradient(
+      45deg,
+      rgba(187, 0, 255, 0.5) 50%,
+      transparent 50%
+    ),
+    linear-gradient(-45deg, rgba(163, 0, 204, 0.5) 50%, transparent 50%);
 }
 
 .demo-projects-parent section:hover {
   transform: scale(1.2);
-  border-radius: 20px;
+  border-radius: 10px;
+  opacity: 1;
+  box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.5);
+  z-index: 100;
   transition: all 0.3s ease-in-out;
+  background-color: aliceblue;
+}
+
+/* section: css */
+
+.project-section-container {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+}
+
+.project-section-header {
+  display: flex;
+  height: 20vh;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 4px;
+}
+.project-section-header h1 {
+  font-size: 1.3rem;
+  font-weight: bold;
+  color: rgb(0, 0, 0);
+  margin: 0 !important;
+  padding: 0 !important;
+  text-align: center;
+}
+.project-section-header h2 {
+  font-size: 1rem;
+  font-weight: 500;
+  color: rgb(0, 0, 0);
+  margin-top: 3px;
+  padding: 0 !important;
+  text-align: center;
+}
+.project-section-image {
+  display: flex;
+  flex-direction: column;
+  height: 40vh;
+}
+.project-section-options {
+  height: 36vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.project-section-tehcnologies {
+  margin-top: 20px;
+}
+.project-section-options h2 {
+  font-size: 1.15rem;
+  font-weight: bold;
+  color: rgb(0, 0, 0);
+  padding: 2px !important;
+}
+.project-section-options h2 span {
+  display: flex;
+  font-size: 1.05rem;
+  font-weight: 400;
+  padding-inline: 6px !important;
+
+}
+.project-section-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.video-show {
+  align-self: center;
+  background-color: rgb(44, 44, 44);
 }
