--- a/src/PortfolioContainer/Projects/Projects.css
+++ b/src/PortfolioContainer/Projects/Projects.css
@@ -19,7 +19,7 @@
   padding-block: 26px;
   padding-inline: 22px;
   display: flex;
-  scroll-snap-type: x proximity;
+  scroll-snap-type: x mandatory;
   overflow-x: scroll;
   overflow-y: hidden;
   width: 100vw;
@@ -30,10 +30,9 @@
   min-width: 40vh;
   margin: 2vw;
   transition: all 0.3s ease-out;
-  opacity: 0.8;
+  opacity: 0.6;
   background-size: cover;
   background-color: rgb(35, 70, 92);
-  background-color: #e6f7ff;
   background-image: linear-gradient(
       45deg,
       rgba(0, 170, 255, 0.5) 50%,
@@ -66,6 +65,30 @@
     ),
     linear-gradient(-45deg, rgba(163, 0, 204, 0.5) 50%, transparent 50%);
 }
+.demo-projects-parent section:nth-child(4) {
+  background-image: linear-gradient(
+      45deg,
+      rgba(255, 0, 0, 0.5) 50%,
+      transparent 50%
+    ),
+    linear-gradient(-45deg, rgba(204, 0, 0, 0.5) 50%, transparent 50%);
+}
+.demo-projects-parent section:nth-child(5) {
+  background-image: linear-gradient(
+      45deg,
+      rgba(84, 0, 96, 0.5) 50%,
+      transparent 50%
+    ),
+    linear-gradient(-45deg, rgba(108, 0, 112, 0.5) 50%, transparent 50%);
+}
+.demo-projects-parent section:nth-child(6) {
+  background-image: linear-gradient(
+      45deg,
+      rgba(0, 255, 242, 0.5) 50%,
+      transparent 50%
+    ),
+    linear-gradient(-45deg, rgba(0, 204, 204, 0.5) 50%, transparent 50%);
+}
 
 .demo-projects-parent section:hover {
   transform: scale(1.2);
@@ -74,7 +97,7 @@
   box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.5);
   z-index: 100;
   transition: all 0.3s ease-in-out;
-  background-color: aliceblue;
+  background-color: #e6f7ff;
 }
 
 /* section: css */
@@ -111,7 +134,7 @@
 .project-section-image {
   display: flex;
   flex-direction: column;
-  height: 40vh;
+  height: 29vh;
 }
 .project-section-options {
   height: 36vh;
@@ -123,25 +146,59 @@
   margin-top: 20px;
 }
 .project-section-options h2 {
-  font-size: 1.15rem;
+  font-size: 1.1rem;
   font-weight: bold;
   color: rgb(0, 0, 0);
   padding: 2px !important;
 }
 .project-section-options h2 span {
   display: flex;
-  font-size: 1.05rem;
+  font-size: 1rem;
   font-weight: 400;
   padding-inline: 6px !important;
-
 }
 .project-section-buttons {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  padding-inline: 6px !important;
 }
-
+.project-section-buttons .btn {
+  width: 120px;
+}
+.project-section-buttons .highlighted-btn:hover {
+  background-color: rgb(248, 211, 207);
+}
 .video-show {
   align-self: center;
   background-color: rgb(44, 44, 44);
+}
+
+@media screen and (max-width: 1110px) {
+  .demo-projects-parent section {
+    height: 37vh;
+    min-width: 36vh;
+  }
+}
+
+@media screen and (max-width: 910px) {
+  .demo-projects-parent section {
+    height: 40vh;
+    min-width: 30vh;
+  }
+  .project-section-buttons .btn {
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .demo-projects-parent section {
+    height: 47vh;
+    min-width: 30vh;
+  }
+  .project-section-buttons .btn {
+    width: 80px;
+  }
+  .video-show {
+    height: 90px;
+  }
 }
