--- a/src/PortfolioContainer/Projects/Projects.css
+++ b/src/PortfolioContainer/Projects/Projects.css
@@ -9,7 +9,7 @@
 .demo-projects-parent {
   display: flex;
   left: 0;
-  height: 66vh;
+  height: 400px;
   width: 100vw;
   align-self: center;
   align-items: center;
@@ -22,12 +22,12 @@
   scroll-snap-type: x mandatory;
   overflow-x: scroll;
   overflow-y: hidden;
-  width: 100vw;
+  width: 90vw;
 }
 .demo-projects-parent section {
   display: flex;
-  height: 50vh;
-  min-width: 40vh;
+  height: 360px;
+  min-width: 260px;
   margin: 2vw;
   transition: all 0.3s ease-out;
   opacity: 0.6;
@@ -110,7 +110,7 @@
 
 .project-section-header {
   display: flex;
-  height: 20vh;
+  height: 90px;
   flex-direction: column;
   align-items: center;
   margin-top: 4px;
@@ -134,10 +134,10 @@
 .project-section-image {
   display: flex;
   flex-direction: column;
-  height: 29vh;
+  height: 200px;
 }
 .project-section-options {
-  height: 36vh;
+  height: 200px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -162,6 +162,7 @@
   flex-direction: row;
   justify-content: space-between;
   padding-inline: 6px !important;
+  padding-bottom: 2px;
 }
 .project-section-buttons .btn {
   width: 120px;
@@ -174,19 +175,14 @@
   background-color: rgb(44, 44, 44);
 }
 
-@media screen and (max-width: 1110px) {
-  .demo-projects-parent section {
-    height: 37vh;
-    min-width: 36vh;
-  }
-}
+/* width sizes: css */
 
-@media screen and (max-width: 910px) {
+@media screen and (max-width: 810px) {
   .demo-projects-parent section {
-    height: 40vh;
-    min-width: 30vh;
+    height: 400px;
   }
-  .project-section-buttons .btn {
+  .demo-projects-parent section {
+    margin: 5vw;
   }
 }
 
