--- a/src/PortfolioContainer/Home/Profile/Profile.css
+++ b/src/PortfolioContainer/Home/Profile/Profile.css
@@ -77,6 +77,7 @@
   border-radius: 50%;
   background-repeat: no-repeat;
   background-position: center;
+  background-position-y: -7px;
   transform: scale(1);
   transition: all 0.6s ease-in-out;
 }
