--- a/src/PortfolioContainer/Projects/Projects.css
+++ b/src/PortfolioContainer/Projects/Projects.css
@@ -22,14 +22,14 @@
   scroll-snap-type: x mandatory;
   overflow-x: scroll;
   overflow-y: hidden;
-  width: 90vw;
+  width: 1000px;
 }
 .demo-projects-parent section {
   display: flex;
   height: 360px;
   min-width: 260px;
   margin: 2vw;
-  transition: all 0.3s ease-out;
+  transition: all 0.8s ease-out;
   opacity: 0.6;
   background-size: cover;
   background-color: rgb(35, 70, 92);
@@ -96,7 +96,7 @@
   opacity: 1;
   box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.5);
   z-index: 100;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.4s ease-in-out;
   background-color: #e6f7ff;
 }
 
@@ -137,7 +137,7 @@
   height: 200px;
 }
 .project-section-options {
-  height: 200px;
+  height: 61%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -177,11 +177,16 @@
 
 /* width sizes: css */
 
+@media screen and (max-width: 1110px) {
+  .p-scroll {
+    width: 90vw;
+  }
+}
+
 @media screen and (max-width: 810px) {
   .demo-projects-parent section {
     height: 400px;
-  }
-  .demo-projects-parent section {
+    scroll-snap-align: center;
     margin: 5vw;
   }
 }
