--- a/src/PortfolioContainer/Home/Profile/Profile.css
+++ b/src/PortfolioContainer/Home/Profile/Profile.css
@@ -72,7 +72,7 @@
 .profile-image-backround {
   height: 92%;
   width: 92%;
-  background-image: url("../../../assets/Home/profilephoto.jpeg");
+  background-image: url("../../../assets/Home/profilephoto.png");
   background-size: cover;
   border-radius: 50%;
   background-repeat: no-repeat;
