--- a/src/PortfolioContainer/AboutME/AboutCard/AboutCard.css
+++ b/src/PortfolioContainer/AboutME/AboutCard/AboutCard.css
@@ -24,7 +24,7 @@
   width: 50%;
   height: 100%;
   border-radius: 2px;
-  background-image: url("../../../assets/Home/profilephoto.jpeg");
+  background-image: url("../../../assets/Home/profilephoto.png");
   background-size: cover;
   background-position: center;
   background-position-y: -6px;
