--- a/src/PortfolioContainer/Projects/Projects.css
+++ b/src/PortfolioContainer/Projects/Projects.css
@@ -17,20 +17,21 @@
 }
 .p-scroll {
   padding-block: 26px;
-  padding-inline: 22px;
+  padding-inline: 8px;
   display: flex;
   scroll-snap-type: x mandatory;
   overflow-x: scroll;
   overflow-y: hidden;
-  width: 1000px;
+  width: 990px;
 }
 .demo-projects-parent section {
+  scroll-snap-align: center;
   display: flex;
   height: 360px;
   min-width: 260px;
   margin: 2vw;
   transition: all 0.8s ease-out;
-  opacity: 0.6;
+  opacity: 0.72;
   background-size: cover;
   background-color: rgb(35, 70, 92);
   background-image: linear-gradient(
@@ -39,7 +40,6 @@
       transparent 50%
     ),
     linear-gradient(-45deg, rgba(0, 136, 204, 0.5) 50%, transparent 50%);
-  background-size: 70px 73px;
 }
 .demo-projects-parent section:nth-child(1) {
   background-image: linear-gradient(
@@ -104,7 +104,7 @@
 
 .project-section-container {
   display: flex;
-  width: 100%;
+  width: 260px;
   flex-direction: column;
 }
 
@@ -178,12 +178,12 @@
 /* width sizes: css */
 
 @media screen and (max-width: 1110px) {
-  .p-scroll {
-    width: 90vw;
-  }
 }
 
 @media screen and (max-width: 810px) {
+  .p-scroll {
+    width: 90vw;
+  }
   .demo-projects-parent section {
     height: 400px;
     scroll-snap-align: center;
