--- a/src/PortfolioContainer/Projects/Projects.css
+++ b/src/PortfolioContainer/Projects/Projects.css
@@ -20,7 +20,7 @@
   padding-inline: 8px;
   display: flex;
   scroll-snap-type: x mandatory;
-  overflow-x: scroll;
+  overflow-x: hidden;
   overflow-y: hidden;
   width: 990px;
 }
@@ -29,8 +29,11 @@
   display: flex;
   height: 360px;
   min-width: 260px;
-  margin: 2vw;
-  transition: all 0.8s ease-out;
+  margin: 30px;
+  transform: scale(1);
+  transition: all 0.8s ease-out 0.2s;
+  transition-delay: 0.2s;
+
   opacity: 0.72;
   background-size: cover;
   background-color: rgb(35, 70, 92);
@@ -41,7 +44,19 @@
     ),
     linear-gradient(-45deg, rgba(0, 136, 204, 0.5) 50%, transparent 50%);
 }
-.demo-projects-parent section:nth-child(1) {
+.demo-projects-parent .current-project {
+  scroll-snap-align: center;
+  transform: scale(1.2);
+  border-radius: 10px;
+  opacity: 1;
+  box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.5);
+  z-index: 100;
+  transition: all 0.8s ease-in-out 0.2s;
+  transition-delay: 0.3s;
+  background-color: #e6f7ff;
+}
+
+.demo-projects-parent section:nth-child(7) {
   background-image: linear-gradient(
       45deg,
       rgba(68, 255, 0, 0.5) 50%,
@@ -90,14 +105,14 @@
     linear-gradient(-45deg, rgba(0, 204, 204, 0.5) 50%, transparent 50%);
 }
 
-.demo-projects-parent section:hover {
-  transform: scale(1.2);
+.demo-projects-parent .other-projects:hover {
+  transform: scale(1.05);
   border-radius: 10px;
-  opacity: 1;
+  opacity: 0.9;
   box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.5);
-  z-index: 100;
+  z-index: 80;
   transition: all 0.4s ease-in-out;
-  background-color: #e6f7ff;
+  background-color: #9d9d9d;
 }
 
 /* section: css */
@@ -175,6 +190,12 @@
   background-color: rgb(44, 44, 44);
 }
 
+/* blank section: css */
+.project-blank-section-container {
+  width: 320px;
+  flex-direction: column;
+  height: 200px;
+}
 /* width sizes: css */
 
 @media screen and (max-width: 1110px) {
@@ -183,6 +204,7 @@
 @media screen and (max-width: 810px) {
   .p-scroll {
     width: 90vw;
+    overflow-x: scroll;
   }
   .demo-projects-parent section {
     height: 400px;
