--- a/src/PortfolioContainer/Resume/Info/Info.css
+++ b/src/PortfolioContainer/Resume/Info/Info.css
@@ -3,51 +3,16 @@
   overflow-y: hidden;
   overflow-x: hidden;
   scroll-snap-type: y mandatory;
-
 }
-
-/* info: css */
-
-.resum-info {
-  width: 75%;
-  height: 100%;
-}
-
-.scroller section {
-  display: flex;
-  height: 100%;
-}
-/*
-.resum-info-education {
-  display: flex;
-  height: 100%;
-}
-.resum-info-workHistory {
-  display: flex;
-  height: 100%;
-}
-.resum-info-skills {
-  display: flex;
-  height: 100%;
-}
-.resum-info-projects {
-  display: flex;
-  height: 100%;
-}
-.resum-info-interests {
-  display: flex;
-  height: 100%;
-}
- */
-@media screen and (max-width: 1110px) {
-  .resum-info {
-    height: 360px;
-  }
+.scrollspy {
+  overflow-y: hidden;
+  height: 360px;
 }
 
 @media screen and (max-width: 1020px) {
-  .resum-info {
-    width: 100%;
-    height: 410px;
+  .scrollspy {
+    width: 90vw;
+    margin-left: -12px;
+    overflow-y: scroll;
   }
 }
