--- a/src/PortfolioContainer/ContactMe/ContactInfoCard/ContactInfoCard.css
+++ b/src/PortfolioContainer/ContactMe/ContactInfoCard/ContactInfoCard.css
@@ -104,6 +104,13 @@
     font-size: 34px;
     margin-top: -22px;
   }
+  .infi-input-loop {
+    margin: 0 !important;
+    padding: 0 !important;
+    align-self: flex-start;
+    translate: -40px -20px;
+    height: 30px;
+  }
 }
 
 @media screen and (max-width: 420px) {
