--- a/src/PortfolioContainer/ContactMe/ContactInputCard/ContactInputCard.css
+++ b/src/PortfolioContainer/ContactMe/ContactInputCard/ContactInputCard.css
@@ -1,4 +1,4 @@
-.contact-input-container{
+.contact-input-container {
   display: flex;
   height: 100%;
   width: 110%;
@@ -22,12 +22,13 @@
   width: 90%;
   align-self: center;
   border-radius: 10px;
-  background-color: rgba(247, 247, 247, 0.841);
-  color: #0cbfae;
+  background-color: rgb(228, 249, 249);
+  color: black;
   font-size: 17px;
   font-family: "Roboto Slab", serif;
   font-weight: 300;
   padding: 10px 16px 10px 16px;
+  border-width: 1px;
 }
 .contact-input textarea {
   display: flex;
@@ -35,12 +36,12 @@
   width: 90%;
   align-self: center;
   border-radius: 10px;
-  background-color: rgba(247, 247, 247, 0.841);
-  color: #0cbfae;
+  background-color: rgb(228, 249, 249);
+  color: black;
   font-size: 16px;
   font-family: "Roboto Slab", serif;
   font-weight: 300;
-  padding: 10px 16px 30px 16px;
+  padding: 10px 16px 30px 14px;
 }
 .contact-input h1 {
   color: var(--black);
@@ -53,15 +54,22 @@
   margin: 40px 0px 18px 26px;
 }
 
+.contact-input input:focus {
+  background-color: #fff;
+  color: #077267;
+}
+.contact-input textarea:focus {
+  background-color: #fff;
+  color: #077267;
+}
 @media screen and (max-width: 940px) {
   .contact-input {
     align-self: center;
     width: 400px;
     margin: -30px 0 0 0;
     border-radius: 16px;
-
   }
-  .contact-input-container{
+  .contact-input-container {
     padding-bottom: 10px;
     width: 100%;
   }
@@ -70,7 +78,5 @@
 @media screen and (max-width: 420px) {
   .contact-input {
     width: 250px;
-
-
   }
 }
